--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -5,16 +5,22 @@
         {% set showDetails=true %}
     {% endif %}
 
+    {% if app.session.get(plan.id ~ 'first-time') is not empty %}
+        {% set showDetails=true %}
+    {% endif %}
+
     <div class="col-12 d-flex justify-content-end">
         <h1 class="mr-auto p-2">{{ plan.title }}</h1>
         <h6 class="p-2">{% if plan.date %}{{ plan.date|date('d.m.Y') }}{% endif %}</h6>
     </div>
+    <div class="col-12">
+        {% if is_granted('ROLE_ADMIN') %}<a class="pull-right" href="{{ path('plan_edit', { 'id': plan.id }) }}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit</a>{% endif %}
+    </div>
     {% if plan.description %}
         <div class="col-12">
             <blockquote class="blockquote">{{ plan.description }}</blockquote>
-            {% if is_granted('ROLE_ADMIN') %}<a class="pull-right" href="{{ path('plan_edit', { 'id': plan.id }) }}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit</a>{% endif %}
             {% if app.session.get(plan.id ~ 'first-time') is not empty %}
-                <div class="alert alert-info" role="alert">
+                <div class="alert alert-info col-12" role="alert">
                     <strong>Important!</strong> Save this password: <b>{{ plan.password }}</b> <br>You'll need it to access the plan details.
                 </div>
             {% endif %}
@@ -51,7 +57,12 @@
                                 {% for person in shift.people %}
                                     {% if not plan.isTemplate %}
                                         {% if showDetails %}
-                                            <li>{{ person.name }}</li>
+                                            <li>{{ person.name }}:
+                                                <ul>
+                                                    {% if person.email %}<li>Email: {{ person.email }}</li>{% endif %}
+                                                    {% if person.phone %}<li>phone: {{ person.phone }}</li>{% endif %}
+                                                </ul>
+                                            </li>
                                         {% else %}
                                             <li>{{ person.alias }}</li>
                                         {% endif %}
