make tables responsive

--- a/app/Resources/views/person/index.html.twig
+++ b/app/Resources/views/person/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>People list</h1>
 
-    <table>
+    <table class="table-responsive">
         <thead>
             <tr>
                 <th>Id</th>
