--- a/app/Resources/views/person/show.html.twig
+++ b/app/Resources/views/person/show.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Person</h1>
 
-    <table>
+    <table class="table-responsive">
         <tbody>
             <tr>
                 <th>Id</th>
