--- a/app/Resources/views/plan/index-template.html.twig
+++ b/app/Resources/views/plan/index-template.html.twig
@@ -7,7 +7,7 @@
 
     <div class="col-12">
         {% if plans is not empty %}
-        <table class="table">
+        <table class="table table-responsive">
             <thead class="thead-default">
             <tr>
                 <th>Title</th>
