--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -33,7 +33,7 @@
         {% endif %}
 
         {% if plan.shifts is not empty %}
-            <table class="table">
+            <table style="width: 100%" class="table table-responsive ">
                 <thead class="thead-default">
                 <tr>
                     <th>Shift Title</th>
@@ -75,7 +75,7 @@
                                 {% if count != 0 %}
                                     {% for person in 1..count %}
                                         {% if not plan.isTemplate %}
-                                            <li><a href="{{ path('person_new', { 'shift': shift.id }) }}">Sign in</a> </li>
+                                            <li><a class="text-nowrap" href="{{ path('person_new', { 'shift': shift.id }) }}">Sign in</a> </li>
                                         {% else %}
                                             <li>Person</li>
                                         {% endif %}
