added about page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,6 +46,7 @@
                     {% else %}
                         <li class="nav-item text-nowrap"><a class="nav-link" href="{{ path('login') }}"><i class="fa fa-sign-in" aria-hidden="true"></i> login</a></li>
                     {% endif %}
+                    <li class="nav-item text-nowrap"><a class="nav-link" href="{{ path('about') }}"><i class="fa fa-question-circle-o" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </nav>
