--- a/app/Resources/views/plan/new.html.twig
+++ b/app/Resources/views/plan/new.html.twig
@@ -17,7 +17,15 @@
         </div>
         <hr>
         <h3>Shifts</h3>
+        {% if form.vars.errors is not empty %}
+            <div class="alert alert-danger">
+                {{ form_errors(form) }}
+            </div>
+        {% endif %}
         <ul class="shifts list-unstyled" data-prototype="{{ form_widget(form.shifts.vars.prototype)|e('html_attr') }}">
+            {% for shift in form.shifts %}
+                <li>{{ form_widget(shift) }}</li>
+            {% endfor %}
         </ul>
         <input class="btn btn-primary" type="submit" value="Create" />
         {{ form_end(form) }}
