--- a/app/Resources/views/email/plan-password.html.twig
+++ b/app/Resources/views/email/plan-password.html.twig
@@ -1,5 +1,8 @@
-<h1>You successfully cerated a new shift plan?</h1>
+<h1>You successfully crated a new shift plan!</h1>
 
 <p>
-    To see who enrolled for your shifts you'll need the following password: {{ password }}
+    To see who enrolled for your shifts you'll need the following password:<br>
+    {{ password }}
+    <br>
+    The link to your shift plan: <a href="{{ url('plan_show',{ 'id': plan_id }) }}">{{ url('plan_show',{ 'id': plan_id }) }}</a>
 </p>
