--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    
+
     {% if app.session.get(plan.id) %}
         {% set showDetails=true %}
     {% endif %}
@@ -93,9 +93,9 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Show Shift Details</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <span class="close-cross" aria-label="Close">
+                        <a href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
+                    </span>
                 </div>
                 <div class="modal-body">
                     {{ form_label(password_form.password) }}
