--- a/app/Resources/views/plan/new.html.twig
+++ b/app/Resources/views/plan/new.html.twig
@@ -9,8 +9,10 @@
         {{ form_start(form) }}
         <div class="form-group">
             {{ form_row(form.title) }}
-            {{ form_row(form.date) }}
-            {{ form_row(form.email) }}
+            <div {% if plan.isTemplate %}style="display:none"{% endif %}>
+                {{ form_row(form.date) }}
+                {{ form_row(form.email) }}
+            </div>
             {{ form_row(form.description) }}
             <div {% if not is_granted('ROLE_ADMIN') %}style="display:none"{% endif %}>
                 {{ form_row(form.isTemplate) }}
