--- a/app/Resources/views/person/new.html.twig
+++ b/app/Resources/views/person/new.html.twig
@@ -15,6 +15,6 @@
         </div>
         <input class="btn btn-primary" type="submit" value="Create" />
         {{ form_end(form) }}
-    </div>.
+    </div>
 
 {% endblock %}
