finish recover password

--- a/app/Resources/views/default/lost-plan-password.html.twig
+++ b/app/Resources/views/default/lost-plan-password.html.twig
@@ -2,12 +2,23 @@
 
 {% block body %}
     <div class="col-12">
-        <h1>Recover password for plan: </h1>
-        <div class="form-group">
+        <h1>Recover password for plan: {{ plan.title }}</h1>
+        {% if not success %}
             {{ form_start(form) }}
-            {{ form_row(form.email) }}
-        </div>
-        <input class="btn btn-primary" type="submit" value="recover" />
-        {{ form_end(form) }}
-    </div>.
+            {% if not form.vars.valid and form.vars.errors[0].message is defined %}
+                <div class="alert alert-danger">
+                    {{ form.vars.errors[0].message }}
+                </div>
+            {% endif %}
+            <div class="form-group">
+                {{ form_label(form.email) }}
+                {{ form_widget(form.email) }}
+            </div>
+            <input class="btn btn-primary" type="submit" value="recover"/>
+            {{ form_end(form) }}
+        {% else %}
+            <div class="alert alert-success">Please check your email inbox</div>
+            <a href="{{ path('plan_show', { 'id': plan.id }) }}" class="btn btn-primary">back</a>
+        {% endif %}
+    </div>
 {% endblock %}
