--- a/app/Resources/views/plan/index.html.twig
+++ b/app/Resources/views/plan/index.html.twig
@@ -2,12 +2,12 @@
 
 {% block body %}
     <div class="col-12 d-flex justify-content-end">
-        <h1 class="mr-auto p-2">Event List</h1>
+        <h1 class="mr-auto p-2">{% trans %}event_list{% endtrans %}</h1>
         <a href="{{ path('plan_new') }}"><i class="fa p2 fa-2x fa-plus" aria-hidden="true"></i></a>
     </div>
 
     <div class="col-12">
-        {% if plans is not empty %}
+        {% if pagination.items is not empty %}
         <table class="table table-responsive">
             <thead class="thead-default">
             <tr>
@@ -17,7 +17,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for plan in plans %}
+            {% for plan in pagination %}
                 <tr>
                     <th><a href="{{ path('plan_show', { 'id': plan.id }) }}">{{ plan.title }}</a></th>
                     <td>{% if plan.date %}{{ plan.date|date('d.m.Y H:i') }}{% endif %}</td>
@@ -26,6 +26,9 @@
             {% endfor %}
             </tbody>
         </table>
+        <div class="navigation">
+            {{ knp_pagination_render(pagination) }}
+        </div>
         {% else %}
             <div class="alert alert-warning" role="alert">
                 <strong>Warning!</strong> No upcoming event plans.
