--- a/app/Resources/views/plan/index-template.html.twig
+++ b/app/Resources/views/plan/index-template.html.twig
@@ -10,7 +10,7 @@
         <table class="table table-responsive">
             <thead class="thead-default">
             <tr>
-                <th>Title</th>
+                <th>{{ knp_pagination_sortable(pagination, 'Title', 'p.title') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
                 <th>Description</th>
                 <th>Actions</th>
             </tr>
