--- a/app/Resources/views/plan/index.html.twig
+++ b/app/Resources/views/plan/index.html.twig
@@ -11,16 +11,16 @@
         <table class="table table-responsive">
             <thead class="thead-default">
             <tr>
-                <th>{{ knp_pagination_sortable(pagination, 'Title', 'p.title') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
-                <th>{{ knp_pagination_sortable(pagination, 'Date', 'p.date') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
-                <th>Description</th>
+                <th>{{ knp_pagination_sortable(pagination, 'title'|trans, 'p.title') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
+                <th>{{ knp_pagination_sortable(pagination, 'date'|trans, 'p.date') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
+                <th>{% trans %}description{% endtrans %}</th>
             </tr>
             </thead>
             <tbody>
             {% for plan in pagination %}
                 <tr>
                     <th><a href="{{ path('plan_show', { 'id': plan.id }) }}">{{ plan.title }}</a></th>
-                    <td>{% if plan.date %}{{ plan.date|date('d.m.Y H:i') }}{% endif %}</td>
+                    <td>{% if plan.date %}{{ plan.date|date('d.m.Y') }}{% endif %}</td>
                     <td>{{ plan.description }}</td>
                 </tr>
             {% endfor %}
