--- a/app/Resources/views/plan/index.html.twig
+++ b/app/Resources/views/plan/index.html.twig
@@ -31,7 +31,7 @@
         </div>
         {% else %}
             <div class="alert alert-warning" role="alert">
-                <strong>Warning!</strong> No upcoming event plans.
+                <strong>{% trans %}warning{% endtrans %}</strong>{% trans %}no_upcoming_event_plans{% endtrans %}
             </div>
         {% endif %}
     </div>
