--- a/app/Resources/views/default/about.html.twig
+++ b/app/Resources/views/default/about.html.twig
@@ -4,20 +4,17 @@
     <div class="col-12">
         <h1 class="display-3">Schicht-Plan.ch</h1>
         <p>
-            <h3>Story</h3>
-            Schicht-Plan.ch was hacked together, for the culutural center <a href="http://akut-thun.ch">AKuT</a> in Thun.<br>
-            They needed a shift planner which allowed to store templates, so external people who want to organise an event at AKuT
-            are able to crate a shift plan themselves.
+            <h3>{% trans %}story{% endtrans %}</h3>
+            {% trans %}story_text{% endtrans %}
         </p>
         <p>
-            <h3>Credits</h3>
-            Built and hacked together by <a href="mailto:jan.friedli@gmx.ch?Subject=Schicht-Plan.ch" target="_top">Jan Friedli</a>
-            This tool was heavily inspired by <a href="https://schichtplan.immerda.ch">schichtplan.immerda.ch</a>
+            <h3>{% trans %}credits{% endtrans %}</h3>
+            {% trans %}credits_text{% endtrans %}
         </p>
 
         <p>
-            <h3>License</h3>
-            This tool is licensed under GNU Affero General Public License (AGPL).<br>
+            <h3>{% trans %}license{% endtrans %}</h3>
+            {% trans %}license_text{% endtrans %}
         </p>
         <div class="col-12">
             <img width="300px" class="img-fluid pull-right" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/AGPLv3_Logo.svg/640px-AGPLv3_Logo.svg.png">
