--- a/app/Resources/views/plan/new-by-template.html.twig
+++ b/app/Resources/views/plan/new-by-template.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="col-12">
-        <h1>New event plan by template</h1>
+        <h1>{% trans %}new_by_template_title{% endtrans %}</h1>
     </div>
 
     {% if plans is not empty %}
@@ -11,12 +11,12 @@
             <div class="form-group">
                 {{ form_widget(form) }}
             </div>
-            <input class="btn btn-primary" type="submit" value="Create" />
+            <input class="btn btn-primary" type="submit" value="{% trans %}create{% endtrans %}" />
             {{ form_end(form) }}
         </div>
     {% else %}
         <div class="alert alert-warning col-12" role="alert">
-            <strong>Warning!</strong> No predefined templates.
+            <strong>{% trans %}warning{% endtrans %}</strong> {% trans %}no_templates_defined{% endtrans %}
         </div>
     {% endif%}
 {% endblock %}
